fix layout issues

--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -120,4 +120,7 @@
   margin-top: 1rem;
 }
 
+.image-output{
+  max-width: 32rem;
+}
 
